crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/no_undeclared_variables_check_types_handles_svelte_ts_script_globals.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "linter": {
    "rules": {
      "correctness": {
        "noUndeclaredVariables": {
          "level": "error",
          "options": {
            "checkTypes": true
          }
        }
      }
    }
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
type B<T> = PromiseLike<T>;
</script>
<div></div>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
