crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/no_undeclared_variables_handles_svelte_store_dereference.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.svelte`

```svelte
<script>
const store = 1;
$store;
$missing;
</script>
<div></div>
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.svelte:4:1 lint/correctness/noUndeclaredVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The $missing variable is undeclared.
  
    2 │ const store = 1;
    3 │ $store;
  > 4 │ $missing;
      │ ^^^^^^^^
    5 │ </script>
    6 │ <div></div>
  
  i By default, Biome recognizes browser and Node.js globals.
    You can ignore more globals using the javascript.globals configuration.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
