crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/no_unused_imports_is_not_triggered_for_aliased_svelte_component_in_template.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
import { default as ComponentAlias } from "./Component.svelte";
</script>

<ComponentAlias />

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
