crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/no_unused_imports_not_triggered_for_default_and_named_component_imports.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "experimentalFullSupportEnabled": true,
    "linter": { "enabled": true }
  }
}
```

## `AnotherComponent.svelte`

```svelte
<script context="module" lang="ts">
export const someConstant = Symbol();
</script>

<div></div>

```

## `file.svelte`

```svelte
<script lang="ts">
import AnotherComponent, { someConstant } from "./AnotherComponent.svelte";
</script>

<AnotherComponent {someConstant} />
<AnotherComponent someConstant={someConstant} />

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
