crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/no_unused_imports_not_triggered_for_reexported_component_aliases.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "experimentalFullSupportEnabled": true,
    "linter": { "enabled": true }
  }
}
```

## `AnotherComponent.svelte`

```svelte
<div></div>
```

## `file.svelte`

```svelte
<script lang="ts">
import { Thing as Something, Thing } from "./file";
</script>

<Something />
<Thing />

```

## `file.ts`

```ts
export { default as Thing } from "./AnotherComponent.svelte";
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```

