crates/biome_cli/tests/snapshots/main_cases_handle_svelte_files/no_useless_lone_block_statements_is_not_triggered.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<CollapsiblePrimitive.Content>
	{#snippet child({ props, open })}
		{#if open}
			<div {...props} transition:slide={{ duration }}>
				{@render children?.()}
			</div>
		{/if}
	{/snippet}
</CollapsiblePrimitive.Content>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
